--- a/src/components/Player/Card/Card.css
+++ b/src/components/Player/Card/Card.css
@@ -2,4 +2,54 @@
     width: 300px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
+    transition: 0.3s;
+    animation: ease-in-out;
+}
+
+.card-container:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px -4px;
+}
+
+.card-content{
+    margin: 1rem;
+    margin-top: 0.5rem;
+
+}
+
+h2,p{
+    /* Resetting default value */
+    margin: 0;
+    padding: 0;
+}
+
+.card-title{
+    margin-bottom: 0.5rem;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+}
+
+.btn button{
+    padding: 0.5rem;
+    background-color: bisque;
+    border:none;
+    transition: 0.2s;
+    margin-bottom: 0.5rem;
+    border-radius: 3px;
+}
+
+.btn button:hover{
+    transform: scale(1.1);
+    /* box-shadow: 0px 0px 15px 0px;
+    background:rgba (27, 156, 252, 0.1); */
+}
+
+button{
+    text-transform: uppercase;
+    color:rgb(61, 10, 57);
+    text-decoration: none;
+    font-weight: bold;
 }
