--- a/src/components/Player/Villain/Villain.css
+++ b/src/components/Player/Villain/Villain.css
@@ -3,3 +3,26 @@
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
 }
+
+/* .villain-container:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px 0px;
+} */
+
+.villain-content{
+    margin: 1rem;
+    margin-top: 0.5rem;
+
+}
+
+h3,p{
+    /* Resetting default value */
+    margin: 0;
+    padding: 0;
+}
+
+.villain-title{
+    margin-bottom: 0.5rem;
+
+}
+
