--- a/src/components/Player/Card/Card.css
+++ b/src/components/Player/Card/Card.css
@@ -53,3 +53,12 @@ button{
     text-decoration: none;
     font-weight: bold;
 }
+
+/* Trying to set them side by side:  */
+
+
+/* .column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+  } */
