--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -7,13 +7,47 @@
 
   .navbar a {
     float: left;
-    font-size: 16px;
+    font-size: 10px;
     color: white;
     text-align: center;
     padding: 14px 16px;
+    
     text-decoration: none;
   }
 
   .scorecard {
     font-size: 16px;
+  }
+
+  .top-header{
+    color: white;
+    background-color:darkblue;
+    border-color: yellow;
+    border-width: .1em;
+    border-style: solid;
+    border-radius: 1px;
+    font-size: 50px;
+    text-shadow: 2px 2px 5px purple;
+    font-family: fantasy;
+  }
+
+  .top-header:before{
+    position: absolute;
+    display:block;
+    content: '';
+    border: 2px solid orange;
+    height: 33.5%;
+    width: 96.5%;
+    box-sizing: border-box;
+  }
+
+  .app-body{
+  background-color: #acb6c9;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  color: white;
   }
