--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -51,3 +51,39 @@
   font-size: 15px;
   color: white;
   }
+
+
+  
+  /* .name-badge{
+    
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  margin: 0 auto;
+  width: 500px;
+  height: 300px;
+  background-color: red;
+  border-radius: 20px;
+  padding: 10px 0;
+  }
+  .name-badge-title {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 32px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    padding: 0 0 10px;
+    margin: 0;
+  }
+  .name-badge-copy {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.1em;
+    text-align: center;
+    margin: 0;
+  }
+  .name-badge-canvas {
+    width: 100%;
+    height: 65%;
+    cursor: default;
+    background-color: white;
+  } */
