--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -42,13 +42,13 @@
   }
 
   .app-body{
-  background-color: #acb6c9;
+  /* background-color: #acb6c9; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 15px;
+  font-size: 10px;
   color: white;
   }
 
