--- a/src/components/Player/Card/Card.css
+++ b/src/components/Player/Card/Card.css
@@ -1,5 +1,5 @@
 .card-container{
-    width: 300px;
+    width: 700px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
     transition: 0.3s;
@@ -11,11 +11,11 @@
     box-shadow: 0px 0px 15px -4px;
 }
 
-.card-content{
-    margin: 1rem;
+/* .card-content{
+    margin: 2rem;
     margin-top: 0.5rem;
 
-}
+} */
 
 h2,p{
     /* Resetting default value */
@@ -37,7 +37,8 @@ h2,p{
     background-color: bisque;
     border:none;
     transition: 0.2s;
-    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     border-radius: 3px;
 }
 
@@ -52,6 +53,7 @@ button{
     color:rgb(61, 10, 57);
     text-decoration: none;
     font-weight: bold;
+    font-size: large;
 }
 
 /* Trying to set them side by side:  */
