--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -7,7 +7,7 @@
 
   .navbar a {
     float: left;
-    font-size: 10px;
+    font-size: 50px;
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -16,7 +16,7 @@
   }
 
   .scorecard {
-    font-size: 16px;
+    font-size: 35px;
   }
 
   .top-header{
@@ -26,30 +26,29 @@
     border-width: .1em;
     border-style: solid;
     border-radius: 1px;
-    font-size: 50px;
+    font-size: 150px;
     text-shadow: 2px 2px 5px purple;
     font-family: fantasy;
   }
 
   .top-header:before{
-    position: absolute;
+    position: absolute; 
     display:block;
     content: '';
-    border: 2px solid orange;
-    height: 33.5%;
-    width: 96.5%;
+    border: 10px solid orange;
+    height: 21%;
+    width: 98.1%;
     box-sizing: border-box;
   }
 
   .app-body{
-  /* background-color: #acb6c9; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 10px;
-  color: white;
+  font-size: 30px;
+  color: rgb(10, 7, 7);
   }
 
 
