--- a/src/components/Player/Villain/Villain.css
+++ b/src/components/Player/Villain/Villain.css
@@ -1,11 +1,14 @@
 .villain-container{
-    width: 300px;
+    width: 80%;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .villain-content{
-    margin: 1rem;
+    margin: 5rem;
     margin-top: 0.5rem;
 
 }
