--- a/src/components/Player/Card/Card.css
+++ b/src/components/Player/Card/Card.css
@@ -4,6 +4,10 @@
     box-shadow: 0px 0px 15px -5px;
     transition: 0.3s;
     animation: ease-in-out;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
 }
 
 .card-container:hover{
