--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
 .App-body {
   /* background-color: #acb6c9; */
   min-height: 100vh;
@@ -30,14 +23,6 @@
 }
 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 span.navigationSpace {
   padding-left: 50px;
 }
@@ -53,5 +38,9 @@ input{
   background-color:burlywood;
 }
 
+.container{
+  background-image: url(./supermarketcart_maincropped.jpg);
+  background-size: cover;
 
+}
 
