--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -1,8 +1,9 @@
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(39, 84, 105);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    position: relative;
   }
 
   .navbar a {
@@ -10,9 +11,22 @@
     font-size: 50px;
     color: white;
     text-align: center;
+    justify-content: space-around;
     padding: 14px 16px;
-    
+    margin-left: auto;
+    margin-right: auto;
     text-decoration: none;
+  }
+  .navbar-centered a {
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .topnav-right {
+    float: right;
   }
 
   .scorecard {
@@ -27,7 +41,7 @@
     border-style: solid;
     border-radius: 1px;
     font-size: 150px;
-    text-shadow: 2px 2px 5px purple;
+    text-shadow: 2px 2px 5px rgb(128, 0, 0);
     font-family: fantasy;
   }
 
@@ -43,12 +57,14 @@
 
   .app-body{
   min-height: 100vh;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 30px;
   color: rgb(10, 7, 7);
+  margin-left: auto;
+  margin-right: auto;
   }
 
 
