--- a/src/components/Rounds/Round.css
+++ b/src/components/Rounds/Round.css
@@ -1,10 +1,11 @@
 .card-row {
-    display: flex;
-    /* flex-flow: column wrap; */
+    display:flex;
+    flex-flow: row;
     flex: 1, 1, auto;
     z-index: 1;
-    margin-left: 5px;
-    margin-right: 5px;
+    /* margin-left: 5px;
+    margin-right: 5px; */
+    justify-content: center;
 }
 
 .card-row:after {
