--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  overflow:hidden;
   text-align: center;
 }
 
@@ -9,6 +10,7 @@
 
 .App-body {
   /* background-color: #acb6c9; */
+  overflow:hidden;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,8 +41,11 @@ input{
 }
 
 .container{
+  overflow:hidden;
   background-image: url(./supermarketcart_maincropped.jpg);
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 
 }
 
