--- a/src/components/Player/Card/Card.css
+++ b/src/components/Player/Card/Card.css
@@ -8,6 +8,12 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+    background-color: white;
+    opacity: .4;
+}
+
+.background{
+
 }
 
 .card-container:hover{
