--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -43,9 +43,7 @@
     margin-right: 50px;
     align-items: center;
    justify-content: center;
-   -webkit-text-stroke: 1px black;
-   -webkit-text-fill-color: white;
-   font-weight: bold;
+   background: rgba(243, 189, 107, 0.5);
   }
 
   .top-header{
