--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -107,6 +107,11 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  li{
+    font-weight:600;
+    padding: 2px;
+  }
   /*
   .name-badge-title {
     color: white;
