--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
-  overflow:hidden;
+  /* overflow:hidden; */
   text-align: center;
+  width: 100%;
+  height: 100vh;
+  /* display: flex; */
 }
 
 .App-logo {
@@ -9,11 +12,9 @@
 }
 
 .App-body {
-  /* background-color: #acb6c9; */
-  overflow:hidden;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* overflow:hidden; */
+  /* display: flex;
+  flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -25,12 +26,8 @@
 }
 
 
-span.navigationSpace {
-  padding-left: 50px;
-}
-
 .app-header {
-  overflow: hidden;
+  /* overflow: hidden; */
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -41,7 +38,8 @@ input{
 }
 
 .container{
-  overflow:hidden;
+  /* overflow:hidden; */
+  display: flex;
   background-image: url(./supermarketcart_maincropped.jpg);
   background-size: cover;
   background-position: center;
