--- a/src/components/Player/Villain/Villain.css
+++ b/src/components/Player/Villain/Villain.css
@@ -1,6 +1,6 @@
 .villain-container{
     width: 80%;
-    overflow: hidden;
+    /* overflow: hidden; */
     box-shadow: 0px 0px 15px -5px;
     text-align: center;
     margin-left: auto;
